KPropertiesDialog: fix applying permissions recursively

If "apply recursively" is enabled for dirA, we need to apply the owner/group
permissions to the contents of that dir, even if the owner/group weren't
changed in the dialog, since the items under that dir could have different
permissions.

BUG: 225658
FIXED-IN: 5.85